# Coreria

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  check_commands.sh  main.py  specify-init-transcript.txt
.github/: copilot-instructions.md
.github/instructions/: terminal.instructions.md
AGI-Agent/output/: dreamweaver_core.py  dreamweaver_plan.md  dreamweaver_spec.md  progress_report.json
Spec-kit/specs/main/: plan.md
elria/: __init__.py  engine.py
specs/main/: plan.md
src/: engine.rs  lib.rs  main.cpp  main.rs
src/audio/: audio.cpp
src/core/: core.cpp  core.h
src/renderer/: renderer.cpp  renderer.h
tests/: engine.rs  test_engine.py
